Lab07/07-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    #ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - http:
      paths:
        - path: /customers
          backend:
            serviceName: lab01
            servicePort: 7070
        - path: /correlations
          backend:
            serviceName: lab02
            servicePort: 7071
